fix on iteration

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -18,23 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "386b61a3-28b1-4418-ab50-06190ac182a4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "# ``` 'x', 'x', 'x', 5, 7, 20, 2, 19, 15, 14 ```"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "import random\n",
     "from IPython.display import display, Markdown, Latex, clear_output, display_markdown\n",
@@ -49,7 +34,7 @@
     "num = str(num_list).replace(\"[\",\"\").replace(\"]\",\"\")\n",
     "display(Markdown((f\"# ``` {num} ```\" )))\n",
     "\n",
-    "for i in range(0, len(num_list)-1):\n",
+    "for i in range(0, len(num_list)):\n",
     "    ch = int(input())\n",
     "    while(ch not in num_list or ch == -1):\n",
     "        ch = int(input())\n",
@@ -59,6 +44,19 @@
     "    num = str(num_list).replace(\"[\",\"\").replace(\"]\",\"\")\n",
     "    clear_output()\n",
     "    display(Markdown((f\"# ``` {num} ```\" )))\n"
+   ],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ],
+      "text/markdown": "# ``` 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 10 ```"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
    ]
   }
  ],
