let's remove some numbers babeh

--- a/Tools/btrees/btrees.ipynb
+++ b/Tools/btrees/btrees.ipynb
@@ -5,15 +5,9 @@
    "id": "8a77807f92f26ee",
    "metadata": {},
    "source": [
-    "# This is a sample Jupyter Notebook\n",
+    "# For adding\n",
     "\n",
-    "Below is an example of a code cell. \n",
-    "Put your cursor into the cell and press Shift+Enter to execute it and select the next one, or click 'Run Cell' button.\n",
-    "\n",
-    "Press Double Shift to search everywhere for classes, files, tool windows, actions, and settings.\n",
-    "\n",
-    "To learn more about Jupyter Notebooks in PyCharm, see [help](https://www.jetbrains.com/help/pycharm/ipython-notebook-support.html).\n",
-    "For an overview of PyCharm, go to Help -> Learn IDE features or refer to [our documentation](https://www.jetbrains.com/help/pycharm/getting-started.html)."
+    "We use this function for adding numbers to a B-tree, so I can generate numbers and keep track"
    ]
   },
   {
@@ -58,6 +52,57 @@
      "output_type": "display_data"
     }
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# For removing\n",
+    "We'll use this for the opposite, adding a list and removing numbers. This helps me keep track."
+   ],
+   "id": "3ada887e1e0c3a90"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import random\n",
+    "from IPython.display import display, Markdown, Latex, clear_output, display_markdown\n",
+    "import sys\n",
+    "import easygui\n",
+    "\n",
+    "num_list = list(map(int, input().split()))\n",
+    "\n",
+    "while len(num_list) > 0:\n",
+    "    clear_output()\n",
+    "    element_to_remove = random.choice(num_list)\n",
+    "    display(Markdown((f\"# ``` {num_list}  \"\n",
+    "                      f\"Remove {element_to_remove}```\" )))\n",
+    "    num_list.remove(element_to_remove)\n",
+    "    easygui.msgbox(\"Press enter to continue.\", \"Ready?\")\n"
+   ],
+   "id": "91e93592f18430a8",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ],
+      "text/markdown": "# ``` [4]  Remove 4```"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "20edb9d34cd1297e"
   }
  ],
  "metadata": {
