--- a/Tools/btrees/btrees.ipynb
+++ b/Tools/btrees/btrees.ipynb
@@ -63,7 +63,11 @@
    "id": "3ada887e1e0c3a90"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
    "source": [
     "import random\n",
@@ -72,24 +76,26 @@
     "import easygui\n",
     "\n",
     "num_list = list(map(int, input().split()))\n",
-    "\n",
+    "removed_numbers = []\n",
     "while len(num_list) > 0:\n",
     "    clear_output()\n",
     "    element_to_remove = random.choice(num_list)\n",
-    "    display(Markdown((f\"# ``` {num_list}  \"\n",
+    "    removed_numbers.append(element_to_remove)\n",
+    "    display(Markdown((f\"# ``` Removed numbers: {removed_numbers} \\n \"\n",
+    "                      f\"{num_list}  \"\n",
     "                      f\"Remove {element_to_remove}```\" )))\n",
     "    num_list.remove(element_to_remove)\n",
     "    easygui.msgbox(\"Press enter to continue.\", \"Ready?\")\n"
    ],
    "id": "91e93592f18430a8",
-   "execution_count": 16,
+   "execution_count": null,
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ],
-      "text/markdown": "# ``` [4]  Remove 4```"
+      "text/markdown": "# ``` [6, 5, 16, 0, 11, 12, 19, 20]  Remove 16```"
      },
      "metadata": {},
      "output_type": "display_data"
