--- a/Tools/btrees/btrees.ipynb
+++ b/Tools/btrees/btrees.ipynb
@@ -63,11 +63,7 @@
    "id": "3ada887e1e0c3a90"
   },
   {
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import random\n",
@@ -81,21 +77,21 @@
     "    clear_output()\n",
     "    element_to_remove = random.choice(num_list)\n",
     "    removed_numbers.append(element_to_remove)\n",
-    "    display(Markdown((f\"# ``` Removed numbers: {removed_numbers} \\n \"\n",
-    "                      f\"{num_list}  \"\n",
+    "    display(Markdown((f\"# ``` Removed numbers: {removed_numbers} ``` \\n \"\n",
+    "                      f\"```{num_list}  \"\n",
     "                      f\"Remove {element_to_remove}```\" )))\n",
     "    num_list.remove(element_to_remove)\n",
     "    easygui.msgbox(\"Press enter to continue.\", \"Ready?\")\n"
    ],
    "id": "91e93592f18430a8",
-   "execution_count": null,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ],
-      "text/markdown": "# ``` [6, 5, 16, 0, 11, 12, 19, 20]  Remove 16```"
+      "text/markdown": "# ``` Removed numbers: [2, 4, 3, 1] ``` \n ```[1]  Remove 1```"
      },
      "metadata": {},
      "output_type": "display_data"
