--- a/Tools/btrees/btrees.ipynb
+++ b/Tools/btrees/btrees.ipynb
@@ -78,20 +78,20 @@
     "    element_to_remove = random.choice(num_list)\n",
     "    removed_numbers.append(element_to_remove)\n",
     "    display(Markdown((f\"# ``` Removed numbers: {removed_numbers} ``` \\n \"\n",
-    "                      f\"```{num_list}  \"\n",
-    "                      f\"Remove {element_to_remove}```\" )))\n",
+    "                      f\"```# {num_list}  \"\n",
+    "                      f\" Remove {element_to_remove}```\" )))\n",
     "    num_list.remove(element_to_remove)\n",
     "    easygui.msgbox(\"Press enter to continue.\", \"Ready?\")\n"
    ],
    "id": "91e93592f18430a8",
-   "execution_count": 19,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ],
-      "text/markdown": "# ``` Removed numbers: [2, 4, 3, 1] ``` \n ```[1]  Remove 1```"
+      "text/markdown": "# ``` Removed numbers: [4, 2, 3, 1] ``` \n ```# [1]   Remove 1```"
      },
      "metadata": {},
      "output_type": "display_data"
